fixes images on mobile

--- a/app/assets/stylesheets/_grid_index.css.scss
+++ b/app/assets/stylesheets/_grid_index.css.scss
@@ -86,7 +86,9 @@
   min-width: 25%;
 
 	opacity: 0.9;
-	@include infoOff();
+	@media #{$tablet}{		
+		@include infoOff();
+	}
 	.no-touch &.sr-middle:hover{
 		@include infoOff();
 	}
